<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/sort_az" android:title="@string/menu_sort_name_a_z" />
    <item android:id="@+id/sort_za" android:title="@string/menu_sort_name_z_a" />
    <item android:id="@+id/sort_price_low" android:title="@string/menu_sort_price_low_high" />
    <item android:id="@+id/sort_price_high" android:title="@string/menu_sort_price_high_low" />
    <item android:id="@+id/sort_stock_low" android:title="@string/menu_sort_stock_low_high" />
    <item android:id="@+id/sort_stock_high" android:title="@string/menu_sort_stock_high_low" />
    <item android:id="@+id/sort_stock_value" android:title="@string/menu_sort_stock_value_high_low" />
    <item android:id="@+id/sort_category" android:title="@string/menu_sort_category" />
    <item android:id="@+id/sort_best_selling" android:title="@string/menu_sort_best_selling" />
    <item android:id="@+id/sort_top_revenue" android:title="@string/menu_sort_top_revenue" />
    <item android:id="@+id/sort_top_profit" android:title="@string/menu_sort_most_profitable" />

</menu>
